[gd_scene load_steps=14 format=2]

[ext_resource path="res://nodes/monsters/Gluttony.gd" type="Script" id=1]
[ext_resource path="res://gfx/monsters.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 16, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 16, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 9 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Gluttony" type="KinematicBody2D" groups=[
"monster",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="."]
visible = false

[node name="Collisionshape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -4, -4 )
shape = SubResource( 3 )

[node name="Belly" type="ColorRect" parent="."]
visible = false
margin_left = -8.0
margin_right = 8.0
margin_bottom = 16.0
color = Color( 0.639216, 0.372549, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="ColorRect" parent="."]
margin_left = -0.21611
margin_top = -14.2784
margin_right = 7.78389
margin_bottom = -6.27837
color = Color( 0.639216, 0.372549, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 2.78109, -7.41624 )
rotation = 0.403171
frames = SubResource( 11 )
frame = 3
playing = true

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
